# glpi-exporter

./: .gitignore  Cargo.toml  README.md
glpi_server_scripts/: README.md  glpi-update.conf  glpi-update.sh
src/: aggregator.rs  app.rs  config.rs  date_util.rs  glpi_client.rs  history_query.rs  history_store.rs  i18n.rs  main.rs  models.rs  worker.rs
src/export/: csv_export.rs  excel_export.rs  json_export.rs
src/ui/: agent_panel.rs  cleanup_panel.rs  connection_panel.rs  export_panel.rs  filter_panel.rs  history_panel.rs  license_panel.rs  mod.rs  pc_panel.rs  pc_software_panel.rs  software_table.rs  status_bar.rs
