[package]
name = "glpi-software-export"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/jacksonm36/glpi-exporter"
description = "GLPI Software Inventory Explorer - GUI tool to browse and export software installations"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui_extras = { version = "0.31", features = ["default", "chrono"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rust_xlsxwriter = "0.82"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
